default/objects/success__Challenge__c/success__Challenge__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED</description>
    <label>DEPRECATED - Challenge</label>
    <nameField>
        <label>Challenge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEPRECATED - Challenges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>