default/objects/success__Challenge__c/fields/success__Achievement_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>success__Achievement_Acceptance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Achievement Acceptance</label>
    <referenceTo>success__Achievement__c</referenceTo>
    <relationshipName>Challenges</relationshipName>
    <type>Lookup</type>
</CustomField>