default/objects/success__Challenge__c/fields/success__Achievement_Completion__c.field-meta.xml
<CustomField>
    <fullName>success__Achievement_Completion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Achievement Completion</label>
    <referenceTo>success__Achievement__c</referenceTo>
    <relationshipName>Challenges_Completing</relationshipName>
    <type>Lookup</type>
</CustomField>