default/objects/success__Challenge__c/fields/success__Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>success__Additional_Information__c</fullName>
    <label>Additional Information</label>
    <type>Url</type>
</CustomField>