default/objects/success__Challenge__c/fields/success__Complexity__c.field-meta.xml
<CustomField>
    <fullName>success__Complexity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Complexity Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>