default/objects/success__Challenge__c/fields/success__Complexity_Text__c.field-meta.xml
<CustomField>
    <fullName>success__Complexity_Text__c</fullName>
    <formula>IF( success__Complexity__c = 1,  $Label.success__easy,
  IF(success__Complexity__c = 2,  $Label.success__average,
    IF(success__Complexity__c = 3, $Label.success__difficult,
       IF(success__Complexity__c = 4, $Label.success__very_hard,
          &quot;Undefined&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complexity</label>
    <type>Text</type>
</CustomField>