default/objects/success__Challenge__c/fields/success__Featured__c.field-meta.xml
<CustomField>
    <fullName>success__Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the Challenge to be highlighted as &#39;promoted&#39; within the application</description>
    <label>Promoted</label>
    <type>Checkbox</type>
</CustomField>