default/objects/success__Challenge__c/fields/success__Frequency__c.field-meta.xml
<CustomField>
    <fullName>success__Frequency__c</fullName>
    <label>Challenge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-off</fullName>
                <default>true</default>
                <label>One-off</label>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>