default/objects/success__Challenge__c/fields/success__Full_Description__c.field-meta.xml
<CustomField>
    <fullName>success__Full_Description__c</fullName>
    <label>Full Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>