default/objects/success__Challenge__c/fields/success__Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>success__Publish_Date__c</fullName>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>