default/objects/success__Challenge__c/fields/success__Retire_Date__c.field-meta.xml
<CustomField>
    <fullName>success__Retire_Date__c</fullName>
    <label>Retire Date</label>
    <type>Date</type>
</CustomField>